# Messenger

./: .gitignore  README.md
backend_server/: CMakeLists.txt  CopyResources.bat  Execute.bat  ExecuteDebug.bat  ExecuteRelease.bat  GenerateModule.bat  GenerateProject.bat  GenerateRelease.bat
backend_server/cmake/modules/: FindSQLite3.cmake
backend_server/src/: APIServer.hpp  APIServer.inl  handlers.hpp  main.cpp
backend_server/src/request_handlers/: add_member_to_chat_handler.hpp  authorize_handler.hpp  base64.hpp  change_description_handler.hpp  change_profile_photo_handler.hpp  change_username_handler.hpp  check_access_token_handler.hpp  create_chat_handler.hpp  database.hpp  generateJWT.hpp  get_chat_data_handler.hpp  get_chat_messages_handler.hpp  get_messages_after_handler.hpp  get_profile_data_handler.hpp  get_user_chats_handler.hpp  get_username_handler.hpp  http_add_member_to_chat_handler.hpp  http_change_description_handler.hpp  http_change_profile_photo_handler.hpp  http_change_username_handler.hpp  http_check_access_token_handler.hpp  http_create_chat_handler.hpp  http_get_chat_data_handler.hpp  http_get_chat_messages_handler.hpp  http_get_messages_after_handler.hpp  http_get_profile_data_handler.hpp  http_get_user_chats_handler.hpp  http_get_username_handler.hpp  http_login_handler.hpp  http_send_message_handler.hpp  http_signup_handler.hpp  http_update_token_handler.hpp  jwt.hpp  login_handler.hpp  main_request_handler.hpp  send_message_handler.hpp  sha256.hpp  signup_handler.hpp  update_token_handler.hpp
backend_server/src/request_handlers/tools/: base64.hpp  database.hpp  jwt.hpp  sha1.hpp  work_directory.hpp
backend_server/src/resources/: database.db
server/: CMakeLists.txt
video_server/: package-lock.json  package.json  server.js
web_server/: CMakeLists.txt  Execute.bat  ExecuteDebug.bat  ExecuteRelease.bat  GenerateDebug.bat  GenerateModule.bat
web_server/src/: main.cpp
web_server/src/request_handlers/: get_file_handler.hpp  load_file_data.hpp  main_page_handler.hpp
web_server/src/resources/: index.html  style.css  styles.css
web_server/src/resources/404/: index.html
web_server/src/resources/auth/: index.html  style.css
web_server/src/resources/calls/: index.html  on_load.js  style.css
web_server/src/resources/chat/: index.html  on_load.js  style.css
web_server/src/resources/chat/params/: index.html  on_load.js  style.css
web_server/src/resources/chats/: index.html  on_load.js  style.css
web_server/src/resources/chats/create/: index.html  on_load.js  style.css
web_server/src/resources/css/: custom_button.css  default_content_layout.css  default_layout.css  header.css
web_server/src/resources/js/: add_member_to_chat.js  api_host.js  authorization.js  change_description.js  change_profile_photo.js  change_username.js  check_token.js  create_chat.js  display_header.js  exit.js  send_message.js  update_token.js
web_server/src/resources/profile/: index.html  on_load.js  style.css
web_server/src/resources/profile/params/: index.html  on_load.js  style.css
web_server/src/resources/test/: index.html  style.css
